<resources>
    <string name="app_name">SoloPi</string>
    <string name="more_setting">More</string>
    <string name="collapse_setting">Collapse</string>
    <string name="target_app">Target</string>
    <string name="help_text"><![CDATA[Any question or suggestion, please contact <a href=\"mailto:ruikai.qrk@antgroup.com\">ruikai.qrk@antgroup.com</a>]]></string>
    <string name="app_desc">Android Automation Tools</string>
    <string name="default_scroll_percentage">50</string>
    <string name="default_long_click_time">2000</string>
    <string name="default_sleep_time">10000</string>
    <string name="to_long_template">Content too long, please view in \'%s\'</string>
    <string name="attention_input_space">Mind space</string>
    <string name="splash_app_desc">Automation Testing Tools</string>
    <string name="disclaimer">
&#160;&#160;&#160;&#160;SoloPi is an open source automation test tool that aims for the needs of different users. All  applications, codes and materials of copyright provided by SoloPi shall be owned by SoloPi, and users have the right of free use.\n
&#160;&#160;&#160;&#160;If the user downloads, installs, uses, or modifies the tool and related codes, it indicates that the user trusts the tool. Therefore, SoloPi tool shall not be liable for any loss or injury caused by users to themselves or others when using the tool.\n
&#160;&#160;&#160;&#160;This tool does not contain any malicious code designed to destroy user computer data and obtain user privacy information; The operation information obtained in the process of using this tool will be desensitized by default when the log is printed, and will not be uploaded; When an exception occurs to an application, the user can manually choose whether to report the fault log via email, without disclosing the user\'s privacy.\n
&#160;&#160;&#160;&#160;The tool does not guarantee that applications downloaded from non-tools publishing sites are infected by computer viruses, hidden by disguised Trojan horses program or hacker software. Users using such software may lead to unpredictable risks, users are suggested not to easily download, install and use. SoloPi shall not bear any legal liability arising therefrom.\n
&#160;&#160;&#160;&#160;Users shall not use the functions provided by this tool to mislead or deceive others; Users can only use this tool for learning and communication, and shall not use it for illegal purposes; Users shall not intentionally avoid or destroy the technical measures taken by this tool for the protection of copyright.\n
&#160;&#160;&#160;&#160;The functions provided by this tool have been tested in detail, but it cannot be guaranteed to be fully compatible with all hardware and software systems, and it cannot be guaranteed that this tool is completely error-free. If incompatibilities and software errors occur, users can go to the communication group for technical support. We will try our best to solve problems and answer questions for users.\n
&#160;&#160;&#160;&#160;The use of the system provided by this tool is at the user\'s own risk. To the maximum extent permitted by applicable law, the Tool shall not be liable for any damage or risk arising from the use or inability to use the System.\n
&#160;&#160;&#160;&#160;If any provision of this Agreement is invalid or unenforceable in whole or in part for any reason, or violates any applicable legal provisions, such provision shall be deemed to be deleted, but the remaining provisions of this Agreement shall remain valid and binding.\n
&#160;&#160;&#160;&#160;The author has the right to modify this Agreement in accordance with the changes of relevant laws and regulations and the development needs of tools. In case of any conflict between the old and the new, the latest version shall prevail. If the User continues to use the System, you shall be deemed to have accepted the change of this Agreement.\n
&#160;&#160;&#160;&#160;All rights of interpretation and modification of this Agreement belong to this tool.\n
</string>
    <string name="replay_step_fragment__node_size_format">%d x %d</string>
    <string name="replay_list__local">Local</string>
    <string name="record_service__cost_time">%dms</string>
    <string name="qr_scan__url_not_support">%s\\nNot support</string>
    <string name="info__version_text">v%s</string>
    <string name="function_select__text">Text</string>
    <string name="function_select__description">Description</string>
    <string name="function_select__class_name">ClassName</string>
    <string name="function_select__xpath">Xpath</string>
    <string name="function_select__res_id">ResID</string>
    <string name="case_replay_result__case_name">Case Name: %s</string>
    <string name="case_replay_result__targe_app">Target App: %s</string>
    <string name="case_replay_result__start_time">Start Time: %s</string>
    <string name="case_replay_result__end_time">Finish Time: %s</string>
    <string name="case_record__connected_device">Connected: %d</string>
    <string name="case_record__no_connect_device">Scanned: %d</string>
    <string name="batch_replay_result__case_count">Total：%d</string>
    <string name="batch_replay_result__success_count">Success： %d</string>
    <string name="batch_replay_result__failed_count">Fail： %d</string>
    <string name="constant_global">Global</string>
    <string name="constant__batch_replay">Batch\nReplay</string>
    <string name="activity__case_list">Case List</string>
    <string name="constant__not_config">Unset</string>
    <string name="settings__performance_upload_url">Performance Data Upload</string>
    <string name="settings__record_upload_url">Launch Time Upload</string>
    <string name="settings__plugin_url">Plugin Url</string>
    <string name="settings__ov_password">OPPO/VIVO Password</string>
    <string name="settings__base_dir">SoloPi Data Folder</string>
    <string name="settings__case_auto_replay">One Click Replay</string>
    <string name="settings__skip_accessibility">Fast Accessibility Service</string>
    <string name="settings__display_system_app">Show System App</string>
    <string name="settings__output_charset">Performance Data Encoding</string>
    <string name="settings__encrept_key">Case Encryption Key</string>
    <string name="settings__config_failed">Fail</string>
    <string name="settings__auto_clean_time">Auto Clean</string>
    <string name="settings_auto_clean_hint">\'-1\' for never</string>
    <string name="settings__whether_hide_node_info">Hide Node Info in Logcat</string>
    <string name="constant__yes">Yes</string>
    <string name="constant__no">No</string>
    <string name="settings__load_extrenal_case">Loading external cases…</string>
    <string name="settings__load_count_case">Load %d case</string>
    <string name="settings__load_plugin">Loading plugins…</string>
    <string name="settings__load_success">Plugin \'%s\' installed</string>
    <string name="settings__load_failed">Plugin install fail</string>
    <string name="activity__setting">Setting</string>
    <string name="index__select_mail_app">Choose Mail App</string>
    <string name="index__report_error_log">Upload Error Log</string>
    <string name="index__error_occur_time">Time: %d</string>
    <string name="index__find_error_log">Find unreported error log, should report？</string>
    <string name="case_replay_result__running_result">Result: %s</string>
    <string name="patch__load_failed">Plugin \'%s\' download failed</string>
    <string name="settings__response_upload_url">Launch Time Upload</string>
    <string name="settings__for_auto_install">for install app</string>
    <string name="settings__clear_file_over_days">Clean files created N days ago</string>
    <string name="settings__replay_highlight">Highlight Node in Replay</string>
    <string name="settings__to_load_external_case">Load External Case</string>
    <string name="settings__load_patch_in_patches">Load External Plugin</string>
    <string name="settings__default_patch_path">/sdcard/solopi/patch</string>
    <string name="settings__about">About</string>
    <string name="record__test_app">Target</string>
    <string name="record__switch_app">App</string>
    <string name="record__input_case_name">Please input case name (*)</string>
    <string name="record__input_case_desc">Please input case description</string>
    <string name="record__no_local_case">No local case</string>
    <string name="record__all_cases">View All</string>
    <string name="record__recent_record">Recent</string>
    <string name="qr__camera_permission">SoloPi need permissions for QR code scan.</string>
    <string name="qr__requst_permission">Permission not granted, applying for camera permission.</string>
    <string name="setting__display_system_app">Show system app?</string>
    <string name="setting__auto_replay">Auto start replay case?</string>
    <string name="setting__skip_accessibility">Open accessibility service by ADB?</string>
    <string name="repeat__restart_before_exec">Restart app before replay</string>
    <string name="replay__save_result_to">Save replay result to \'%s\'</string>
    <string name="replay__save_failed">Save failed</string>
    <string name="replay__replay_result">Summary</string>
    <string name="replay__case_steps">Steps</string>
    <string name="replay__running_log">Log</string>
    <string name="replay__case_screenshot">Screenshot</string>
    <string name="settings__screenshot_size">Image Compare Resolution</string>
    <string name="settings__check_update">Check Updates</string>
    <string name="settings__updating_cases">Updating Cases(%d/%d)</string>
    <string name="settings__start_update_cases">Updating Cases</string>
    <string name="settings__unset">Unset</string>
    <string name="record__preparing">Preparing</string>
    <string name="record__prepare_failed">Environment preparing fail.</string>
    <string name="record__case_name_empty">Case name should not be empty.</string>
    <string name="record__app_list_empty">Installed app should not be empty.</string>
    <string name="activity__record">Record &amp; Replay</string>
    <string name="index__disclaimer">Disclaimer</string>
    <string name="replay__delete_case">Delete?</string>
    <string name="assert__content">Content</string>
    <string name="assert__input_assert_content">Assert Content</string>
    <string name="assert__accurate">Accurate</string>
    <string name="assert__include">Including</string>
    <string name="assert__regex">Regex</string>
    <string name="record_config__resolution">Resolution</string>
    <string name="record_config__bitrate">Bitrate(kbps)</string>
    <string name="record_config__framerate">Frame Rate(fps)</string>
    <string name="record_config__expect_diff">Diff Threshold(%)</string>
    <string name="let__string">String</string>
    <string name="let__integer">Integer</string>
    <string name="let__custom">Custom</string>
    <string name="let__custom_hint">such as \'${node.text}\', \'+\' and \'*\' are usable</string>
    <string name="custom__variable_name">Variable Name</string>
    <string name="record_config__report_title">Report Title</string>
    <string name="action_let_cur_value_null">Current: -</string>
    <string name="create_node_classname_title">ClassName(* match every type, need no modification)</string>
    <string name="create_node_classname_match_all">*</string>
    <string name="create_node_text_title">Text (optional)</string>
    <string name="create_node_res_id_title">ResourceId (optional)</string>
    <string name="create_node_xpath_title">XPath (optional)</string>
    <string name="let_global__node_text_pattern">use type ${node.text}, \'+\' and \'*\' are usable</string>
    <string name="let_global__calc_type">Calculation Type</string>
    <string name="let_global__integer">Integer</string>
    <string name="let_global__string">String</string>
    <string name="let_global__variable_name">Variable Name</string>
</resources>