<!--
  ~ Copyright (C) 2015-present, Ant Financial Services Group
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <RelativeLayout
        android:id="@+id/assert_string_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/assert_string_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/assert__content"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/assert_string_edittext"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@id/assert_string_title"
            android:hint="@string/assert__input_assert_content"
            android:textColor="@color/primaryText"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/secondaryText"
            android:textSize="14dp" />

    </RelativeLayout>

    <com.alipay.hulu.ui.FlowRadioGroup
        android:id="@+id/assert_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/assert_string_layout"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/assert__accurate" />

        <RadioButton
            android:id="@+id/ch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assert__include" />

        <RadioButton
            android:id="@+id/ch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assert__regex" />

    </com.alipay.hulu.ui.FlowRadioGroup>
</RelativeLayout>