<!--
  ~ Copyright (C) 2015-present, Ant Financial Services Group
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_global__variable_name"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/textsize_18"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="@dimen/textsize_18"
            />
        <EditText
            android:textSize="@dimen/textsize_16"
            android:id="@+id/dialog_action_let_variable_name"
            android:layout_marginLeft="@dimen/control_dp16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <include layout="@layout/divider" />

    <RelativeLayout
        android:id="@+id/dialog_action_let_other"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/control_dp8"
        android:paddingBottom="@dimen/control_dp8"
        android:paddingLeft="@dimen/control_dp16"
        android:paddingRight="@dimen/control_dp16">

        <RadioGroup
            android:layout_marginLeft="@dimen/control_dp8"
            android:orientation="horizontal"
            android:id="@+id/dialog_action_let_other_type"
            android:layout_toRightOf="@id/dialog_action_let_item_title"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/minus_dp5"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/dialog_action_let_other_type_str"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_global__string"/>
            <RadioButton
                android:id="@+id/dialog_action_let_other_type_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_global__integer"/>
        </RadioGroup>

        <TextView
            android:textSize="@dimen/textsize_18"
            android:textColor="@color/primaryText"
            android:id="@+id/dialog_action_let_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_global__calc_type"/>
        <EditText
            android:id="@+id/dialog_action_let_other_value"
            android:layout_marginTop="2dp"
            android:textSize="@dimen/textsize_14"
            android:hint="@string/let_global__node_text_pattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_action_let_item_title"
            />
        <TextView
            android:id="@+id/dialog_action_let_other_value_val"
            android:textSize="@dimen/textsize_12"
            android:text="@string/action_let_cur_value_null"
            android:layout_marginLeft="@dimen/control_dp8"
            android:textColor="@color/secondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_action_let_other_value"
            />

    </RelativeLayout>
</LinearLayout>