<!--
  ~ Copyright (C) 2015-present, Ant Financial Services Group
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <com.alipay.hulu.ui.CheckableRelativeLayout
        android:id="@+id/dialog_action_let_other"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"
            android:id="@+id/dialog_action_let_item_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:enabled="false"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:id="@+id/dialog_action_let_other_type"
            android:layout_toRightOf="@id/dialog_action_let_item_title"
            android:layout_width="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/dialog_action_let_other_type_str"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let__string"/>
            <RadioButton
                android:id="@+id/dialog_action_let_other_type_int"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let__integer"/>
        </RadioGroup>

        <TextView
            android:textSize="18dp"
            android:textColor="@color/primaryText"
            android:id="@+id/dialog_action_let_item_title"
            android:layout_toRightOf="@id/dialog_action_let_item_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let__custom"/>
        <EditText
            android:id="@+id/dialog_action_let_other_value"
            android:enabled="false"
            android:layout_marginTop="2dp"
            android:textSize="14dp"
            android:hint="@string/let__custom_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dialog_action_let_item_radio"
            android:layout_below="@id/dialog_action_let_item_title"
            />

    </com.alipay.hulu.ui.CheckableRelativeLayout>
    <include layout="@layout/divider" />
    <include layout="@layout/dialog_action_let_item"
        android:id="@+id/dialog_action_let_text"
        />
    <include layout="@layout/divider" />

    <include layout="@layout/dialog_action_let_item"
        android:id="@+id/dialog_action_let_description"
        />
    <include layout="@layout/divider" />

    <include layout="@layout/dialog_action_let_item"
        android:id="@+id/dialog_action_let_class_name"
        />
    <include layout="@layout/divider" />

    <include layout="@layout/dialog_action_let_item"
        android:id="@+id/dialog_action_let_xpath"
        />
    <include layout="@layout/divider" />

    <include layout="@layout/dialog_action_let_item"
        android:id="@+id/dialog_action_let_resource_id"
        />
    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom__variable_name"
            android:textColor="@color/primaryText"
            android:textSize="18dp"
            />
        <EditText
            android:textSize="16dp"
            android:id="@+id/dialog_action_let_variable_name"
            android:layout_marginLeft="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>